src/main/gen/com/github/cielmc/redlibcommandfile/language/parser/RedLibCommandParser.java
// This is a generated file. Not intended for manual editing.
package com.github.cielmc.redlibcommandfile.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.cielmc.redlibcommandfile.language.psi.RedLibCommandTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RedLibCommandParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // alias|help|permission|user|hook|context|assert|nohelp|notab|postarg|hidesub|helpmsg
  static boolean Alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alias")) return false;
    boolean r;
    r = consumeToken(b, ALIAS);
    if (!r) r = consumeToken(b, HELP);
    if (!r) r = consumeToken(b, PERMISSION);
    if (!r) r = consumeToken(b, USER);
    if (!r) r = consumeToken(b, HOOK);
    if (!r) r = consumeToken(b, CONTEXT);
    if (!r) r = consumeToken(b, ASSERT);
    if (!r) r = consumeToken(b, NOHELP);
    if (!r) r = consumeToken(b, NOTAB);
    if (!r) r = consumeToken(b, POSTARG);
    if (!r) r = consumeToken(b, HIDESUB);
    if (!r) r = consumeToken(b, HELPMSG);
    return r;
  }

  /* ********************************************************** */
  // (((ARG_TYPE CONSTRAINT? COLON)? Flag) | (ARG_TYPE CONSTRAINT? COLON Argument)) (newline | space |)
  static boolean Arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg")) return false;
    if (!nextTokenIs(b, "", ARG_TYPE, DASHES)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arg_0(b, l + 1);
    r = r && Arg_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((ARG_TYPE CONSTRAINT? COLON)? Flag) | (ARG_TYPE CONSTRAINT? COLON Argument)
  private static boolean Arg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arg_0_0(b, l + 1);
    if (!r) r = Arg_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ARG_TYPE CONSTRAINT? COLON)? Flag
  private static boolean Arg_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arg_0_0_0(b, l + 1);
    r = r && Flag(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ARG_TYPE CONSTRAINT? COLON)?
  private static boolean Arg_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_0_0")) return false;
    Arg_0_0_0_0(b, l + 1);
    return true;
  }

  // ARG_TYPE CONSTRAINT? COLON
  private static boolean Arg_0_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARG_TYPE);
    r = r && Arg_0_0_0_0_1(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // CONSTRAINT?
  private static boolean Arg_0_0_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_0_0_0_1")) return false;
    consumeToken(b, CONSTRAINT);
    return true;
  }

  // ARG_TYPE CONSTRAINT? COLON Argument
  private static boolean Arg_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARG_TYPE);
    r = r && Arg_0_1_1(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CONSTRAINT?
  private static boolean Arg_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_0_1_1")) return false;
    consumeToken(b, CONSTRAINT);
    return true;
  }

  // newline | space |
  private static boolean Arg_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEWLINE);
    if (!r) r = consumeToken(b, SPACE);
    if (!r) r = consumeToken(b, ARG_1_2_0);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Arg*
  static boolean Args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Args")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Arg(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Args", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ConsumingArg*
  static boolean Args_Can_Consume(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Args_Can_Consume")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConsumingArg(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Args_Can_Consume", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ARG_NAME (noshowtype | ((notrequired | bothmodifiers) (BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE)? ))?
  static boolean Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument")) return false;
    if (!nextTokenIs(b, ARG_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARG_NAME);
    r = r && Argument_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (noshowtype | ((notrequired | bothmodifiers) (BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE)? ))?
  private static boolean Argument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1")) return false;
    Argument_1_0(b, l + 1);
    return true;
  }

  // noshowtype | ((notrequired | bothmodifiers) (BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE)? )
  private static boolean Argument_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NOSHOWTYPE);
    if (!r) r = Argument_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (notrequired | bothmodifiers) (BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE)?
  private static boolean Argument_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Argument_1_0_1_0(b, l + 1);
    r = r && Argument_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // notrequired | bothmodifiers
  private static boolean Argument_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0_1_0")) return false;
    boolean r;
    r = consumeToken(b, NOTREQUIRED);
    if (!r) r = consumeToken(b, BOTHMODIFIERS);
    return r;
  }

  // (BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE)?
  private static boolean Argument_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0_1_1")) return false;
    Argument_1_0_1_1_0(b, l + 1);
    return true;
  }

  // BRACKET_OPEN DEFAULT_VALUE? BRACKET_CLOSE
  private static boolean Argument_1_0_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACKET_OPEN);
    r = r && Argument_1_0_1_1_0_1(b, l + 1);
    r = r && consumeToken(b, BRACKET_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  // DEFAULT_VALUE?
  private static boolean Argument_1_0_1_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1_0_1_1_0_1")) return false;
    consumeToken(b, DEFAULT_VALUE);
    return true;
  }

  /* ********************************************************** */
  // assert space assertname (space assertname)*
  static boolean AssertLine(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssertLine")) return false;
    if (!nextTokenIs(b, ASSERT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 2, ASSERT, SPACE, ASSERTNAME);
    p = r; // pin = 2
    r = r && AssertLine_3(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (space assertname)*
  private static boolean AssertLine_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssertLine_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AssertLine_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AssertLine_3", c)) break;
    }
    return true;
  }

  // space assertname
  private static boolean AssertLine_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssertLine_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SPACE, ASSERTNAME);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (space* newline) | COMMENT
  static boolean Blank_Line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Blank_Line")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Blank_Line_0(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // space* newline
  private static boolean Blank_Line_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Blank_Line_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Blank_Line_0_0(b, l + 1);
    r = r && consumeToken(b, NEWLINE);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean Blank_Line_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Blank_Line_0_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "Blank_Line_0_0", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // space* CBRACKET (newline|<<eof>>)
  static boolean Close_Bracket(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Close_Bracket")) return false;
    if (!nextTokenIs(b, "", CBRACKET, SPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Close_Bracket_0(b, l + 1);
    r = r && consumeToken(b, CBRACKET);
    r = r && Close_Bracket_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean Close_Bracket_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Close_Bracket_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "Close_Bracket_0", c)) break;
    }
    return true;
  }

  // newline|<<eof>>
  private static boolean Close_Bracket_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Close_Bracket_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEWLINE);
    if (!r) r = eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CommandDefinition | CommandDefinition_Consuming | newline
  static boolean CommandDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDef")) return false;
    boolean r;
    r = CommandDefinition(b, l + 1);
    if (!r) r = CommandDefinition_Consuming(b, l + 1);
    if (!r) r = consumeToken(b, NEWLINE);
    return r;
  }

  /* ********************************************************** */
  // CommandDefinition_Base | CommandDefinition_Consuming_Base | newline
  static boolean CommandDef_Base(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDef_Base")) return false;
    boolean r;
    r = CommandDefinition_Base(b, l + 1);
    if (!r) r = CommandDefinition_Consuming_Base(b, l + 1);
    if (!r) r = consumeToken(b, NEWLINE);
    return r;
  }

  /* ********************************************************** */
  // CommandDefinition_Consumed | newline
  static boolean CommandDef_Consumed(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDef_Consumed")) return false;
    boolean r;
    r = CommandDefinition_Consumed(b, l + 1);
    if (!r) r = consumeToken(b, NEWLINE);
    return r;
  }

  /* ********************************************************** */
  // space* CommandName (comma Alias)* (space Args)? newline? Open_Bracket (Line | Blank_Line)* Close_Bracket
  static boolean CommandDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CommandDefinition_0(b, l + 1);
    r = r && CommandName(b, l + 1);
    r = r && CommandDefinition_2(b, l + 1);
    r = r && CommandDefinition_3(b, l + 1);
    r = r && CommandDefinition_4(b, l + 1);
    r = r && Open_Bracket(b, l + 1);
    r = r && CommandDefinition_6(b, l + 1);
    r = r && Close_Bracket(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean CommandDefinition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_0", c)) break;
    }
    return true;
  }

  // (comma Alias)*
  private static boolean CommandDefinition_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_2", c)) break;
    }
    return true;
  }

  // comma Alias
  private static boolean CommandDefinition_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Alias(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (space Args)?
  private static boolean CommandDefinition_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_3")) return false;
    CommandDefinition_3_0(b, l + 1);
    return true;
  }

  // space Args
  private static boolean CommandDefinition_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SPACE);
    r = r && Args(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean CommandDefinition_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_4")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (Line | Blank_Line)*
  private static boolean CommandDefinition_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_6", c)) break;
    }
    return true;
  }

  // Line | Blank_Line
  private static boolean CommandDefinition_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_6_0")) return false;
    boolean r;
    r = Line(b, l + 1);
    if (!r) r = Blank_Line(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // space* CommandName (comma Alias)* (space Args)? newline? Open_Bracket (Line_Base | Blank_Line)* Close_Bracket
  static boolean CommandDefinition_Base(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CommandDefinition_Base_0(b, l + 1);
    r = r && CommandName(b, l + 1);
    r = r && CommandDefinition_Base_2(b, l + 1);
    r = r && CommandDefinition_Base_3(b, l + 1);
    r = r && CommandDefinition_Base_4(b, l + 1);
    r = r && Open_Bracket(b, l + 1);
    r = r && CommandDefinition_Base_6(b, l + 1);
    r = r && Close_Bracket(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean CommandDefinition_Base_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Base_0", c)) break;
    }
    return true;
  }

  // (comma Alias)*
  private static boolean CommandDefinition_Base_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_Base_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Base_2", c)) break;
    }
    return true;
  }

  // comma Alias
  private static boolean CommandDefinition_Base_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Alias(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (space Args)?
  private static boolean CommandDefinition_Base_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_3")) return false;
    CommandDefinition_Base_3_0(b, l + 1);
    return true;
  }

  // space Args
  private static boolean CommandDefinition_Base_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SPACE);
    r = r && Args(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean CommandDefinition_Base_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_4")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (Line_Base | Blank_Line)*
  private static boolean CommandDefinition_Base_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_Base_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Base_6", c)) break;
    }
    return true;
  }

  // Line_Base | Blank_Line
  private static boolean CommandDefinition_Base_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Base_6_0")) return false;
    boolean r;
    r = Line_Base(b, l + 1);
    if (!r) r = Blank_Line(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // space* CommandName (comma Alias)* (space Args_Can_Consume)? newline? Open_Bracket (Line_Consumed_Recovering | Blank_Line)* Close_Bracket
  static boolean CommandDefinition_Consumed(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CommandDefinition_Consumed_0(b, l + 1);
    r = r && CommandName(b, l + 1);
    r = r && CommandDefinition_Consumed_2(b, l + 1);
    r = r && CommandDefinition_Consumed_3(b, l + 1);
    r = r && CommandDefinition_Consumed_4(b, l + 1);
    r = r && Open_Bracket(b, l + 1);
    r = r && CommandDefinition_Consumed_6(b, l + 1);
    r = r && Close_Bracket(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean CommandDefinition_Consumed_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Consumed_0", c)) break;
    }
    return true;
  }

  // (comma Alias)*
  private static boolean CommandDefinition_Consumed_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_Consumed_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Consumed_2", c)) break;
    }
    return true;
  }

  // comma Alias
  private static boolean CommandDefinition_Consumed_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Alias(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (space Args_Can_Consume)?
  private static boolean CommandDefinition_Consumed_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_3")) return false;
    CommandDefinition_Consumed_3_0(b, l + 1);
    return true;
  }

  // space Args_Can_Consume
  private static boolean CommandDefinition_Consumed_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SPACE);
    r = r && Args_Can_Consume(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean CommandDefinition_Consumed_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_4")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (Line_Consumed_Recovering | Blank_Line)*
  private static boolean CommandDefinition_Consumed_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_Consumed_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Consumed_6", c)) break;
    }
    return true;
  }

  // Line_Consumed_Recovering | Blank_Line
  private static boolean CommandDefinition_Consumed_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consumed_6_0")) return false;
    boolean r;
    r = Line_Consumed_Recovering(b, l + 1);
    if (!r) r = Blank_Line(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // space* CommandName (comma Alias)* (space Args_Can_Consume)? newline? Open_Bracket (Line_Consumed | Blank_Line)* Close_Bracket
  static boolean CommandDefinition_Consuming(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CommandDefinition_Consuming_0(b, l + 1);
    r = r && CommandName(b, l + 1);
    r = r && CommandDefinition_Consuming_2(b, l + 1);
    r = r && CommandDefinition_Consuming_3(b, l + 1);
    r = r && CommandDefinition_Consuming_4(b, l + 1);
    r = r && Open_Bracket(b, l + 1);
    r = r && CommandDefinition_Consuming_6(b, l + 1);
    r = r && Close_Bracket(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // space*
  private static boolean CommandDefinition_Consuming_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Consuming_0", c)) break;
    }
    return true;
  }

  // (comma Alias)*
  private static boolean CommandDefinition_Consuming_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommandDefinition_Consuming_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CommandDefinition_Consuming_2", c)) break;
    }
    return true;
  }

  // comma Alias
  private static boolean CommandDefinition_Consuming_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Alias(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (space Args_Can_Consume)?
  private static boolean CommandDefinition_Consuming_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming_3")) return false;
    CommandDefinition_Consuming_3_0(b, l + 1);
    return true;
  }

  // space Args_Can_Consume
  private static boolean CommandDefinition_Consuming_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommandDefinition_Consuming_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SPACE);
    r = r && Args_Can_Consume(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
